--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,8 +4,7 @@
     box-sizing: border-box;
 }
 body {
-    font: Arial, Helvetica, sans-serif;
-    background: #333;
-    color: #fff;
+    font: 16px "Helvetica Neve", Arial, sans-serif;    
+    color: #121214;
 }
 
